--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^2.1.0",
     "material-ui": "^0.17.1",
     "object-to-json": "0.0.5",
+    "prerender-node": "^2.7.0",
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
     "react-dom": "^15.4.2",
