--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "material-ui": "^0.17.1",
     "object-to-json": "0.0.5",
     "prerender-node": "^2.7.0",
+    "prerendercloud": "^1.9.2",
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
     "react-dom": "^15.4.2",
