--- a/client/manifest.json
+++ b/client/manifest.json
@@ -20,5 +20,8 @@
     "display": "standalone",
     "related_applications": [{
         "platform": "web"
-    }]
+    }],
+    "//": "Some browsers will use this to enable push notifications.",
+    "//": "It is the same for all projects, this is not your project's sender ID",
+    "gcm_sender_id": "103953800507"
 }
