--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.1.18",
     "jsdom": "^8.1.0",
     "nodemon": "^1.11.0",
+    "sw-precache-webpack-plugin": "^0.9.1",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
