--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-loader": "^0.10.1",
     "firebase": "^3.7.2",
     "jwt-decode": "^2.1.0",
+    "localforage": "^1.5.0",
     "material-ui": "^0.17.1",
     "object-to-json": "0.0.5",
     "prerender-node": "^2.7.0",
@@ -53,6 +54,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "react-tooltip": "^3.2.1",
     "redux": "^3.0.4",
+    "redux-offline": "^2.0.0",
+    "redux-persist": "^4.6.0",
     "redux-thunk": "^2.1.0",
     "request": "^2.75.0",
     "stripe": "^4.16.0",
