--- a/client/manifest.json
+++ b/client/manifest.json
@@ -10,7 +10,7 @@
             "type": "image/png"
         },
         {
-            "src": "img/apple-touch-icon.png",
+            "src": "images/apple-touch-icon.png",
             "sizes": "180x180",
             "type": "image/png"
         },
