--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux-thunk": "^2.1.0",
     "request": "^2.75.0",
     "stripe": "^4.16.0",
+    "sw-precache": "^5.1.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   },
