--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "request": "^2.75.0",
     "stripe": "^4.16.0",
     "sw-precache": "^5.1.0",
+    "sw-toolbox": "^3.6.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   },
