--- a/client/manifest.json
+++ b/client/manifest.json
@@ -25,5 +25,8 @@
     "display": "standalone",
     "//": "Some browsers will use this to enable push notifications.",
     "//": "It is the same for all projects, this is not your project's sender ID",
-    "gcm_sender_id": "103953800507"
+    "gcm_sender_id": "103953800507",
+    "permissions": [
+        "fileSystem"
+    ]
 }
