--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "redux-offline": "^2.0.0",
     "redux-persist": "^4.6.0",
     "redux-thunk": "^2.1.0",
-    "request": "^2.75.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.0",
     "stripe": "^4.16.0",
     "sw-precache": "^5.1.0",
     "sw-toolbox": "^3.6.0",
