--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "prerendercloud": "^1.9.2",
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
+    "react-circular-progressbar": "^0.1.3",
     "react-dom": "^15.4.2",
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
+    "react-progress-label": "^1.2.2",
     "react-redux": "^4.0.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
