--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.6",
+    "react-slick": "^0.14.11",
     "react-star-rating": "^1.4.2",
     "react-stars": "^2.1.0",
     "react-swipeable-views": "^0.11.1",
