--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
+    "moment": "^2.18.1",
     "object-to-json": "0.0.5",
     "prerender-node": "^2.7.0",
     "prerendercloud": "^1.9.2",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
     "react-circular-progressbar": "^0.1.3",
