--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^0.15.1",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.2",
+    "buttercms": "^1.0.17",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "file-loader": "^0.10.1",
