--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.1.18",
     "jsdom": "^8.1.0",
+    "json-loader": "^0.5.7",
     "nodemon": "^1.11.0",
     "sw-precache-webpack-plugin": "^0.9.1",
     "webpack-dev-server": "^1.14.0"
@@ -37,11 +38,14 @@
     "express": "^4.14.0",
     "file-loader": "^0.10.1",
     "firebase": "^3.7.2",
+    "fs": "0.0.1-security",
     "jwt-decode": "^2.1.0",
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
+    "microm": "^0.2.4",
     "moment": "^2.18.1",
+    "net": "^1.0.2",
     "object-to-json": "0.0.5",
     "prerender-node": "^2.7.0",
     "prerendercloud": "^1.9.2",
@@ -53,12 +57,15 @@
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
     "react-icons": "^2.2.5",
+    "react-loader": "^2.4.2",
+    "react-mic": "^8.0.0",
     "react-pdf-js": "^1.0.35",
     "react-progress-label": "^1.2.2",
     "react-redux": "^4.0.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.6",
+    "react-s3-uploader": "^4.2.0",
     "react-slick": "^0.14.11",
     "react-star-rating": "^1.4.2",
     "react-stars": "^2.1.0",
@@ -74,6 +81,7 @@
     "stripe": "^4.16.0",
     "sw-precache": "^5.1.0",
     "sw-toolbox": "^3.6.0",
+    "tls": "0.0.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   },
