--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "axios": "^0.15.1",
+    "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.2",
     "buttercms": "^1.0.17",
@@ -83,7 +83,8 @@
     "sw-toolbox": "^3.6.0",
     "tls": "0.0.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "engines": {
     "node": "7.6.0"
