--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
     "react-icons": "^2.2.5",
+    "react-image-crop": "^2.0.7",
     "react-loader": "^2.4.2",
     "react-mic": "^8.0.0",
     "react-pdf-js": "^1.0.35",
