--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
     "react-circular-progressbar": "^0.1.3",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.4.2",
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
