--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "redux-thunk": "^2.1.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
+    "sendinblue-api": "^1.0.8",
     "serve-favicon": "^2.0.1",
     "stripe": "^4.16.0",
     "strong-error-handler": "^2.0.0",
