--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-fileuploader-s3": "0.0.1",
     "file-loader": "^0.10.1",
     "firebase": "^3.7.2",
+    "firebase-admin": "^5.2.1",
     "fs": "0.0.1-security",
     "helmet": "^1.3.0",
     "jwt-decode": "^2.1.0",
