--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "moment": "^2.18.1",
     "net": "^1.0.2",
     "object-to-json": "0.0.5",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
     "prerender-node": "^2.7.0",
     "prerendercloud": "^1.9.2",
     "prop-types": "^15.5.10",
@@ -75,6 +77,7 @@
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
     "sendinblue-api": "^1.0.8",
+    "sequelize": "^4.8.0",
     "serve-favicon": "^2.0.1",
     "stripe": "^4.16.0",
     "strong-error-handler": "^2.0.0",
