--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.2",
     "buttercms": "^1.0.17",
+    "chart.js": "^2.6.0",
     "compression": "^1.0.3",
     "connect-multiparty": "^2.0.0",
     "cors": "^2.5.2",
@@ -49,6 +50,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
+    "react-chartjs-2": "^2.6.2",
     "react-circular-progressbar": "^0.1.3",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.4.2",
