--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "connect-multiparty": "^2.0.0",
     "cors": "^2.5.2",
     "dotenv": "^2.0.0",
+    "draft-js": "^0.10.1",
+    "draftjs-to-html": "^0.7.5",
     "express": "^4.14.0",
     "express-fileuploader": "0.0.7",
     "express-fileuploader-s3": "0.0.1",
@@ -32,6 +34,7 @@
     "firebase-admin": "^5.2.1",
     "fs": "0.0.1-security",
     "helmet": "^1.3.0",
+    "immutable": "^3.8.1",
     "jwt-decode": "^2.1.0",
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
@@ -55,6 +58,7 @@
     "react-circular-progressbar": "^0.1.3",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.4.2",
+    "react-draft-wysiwyg": "^1.10.9",
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
     "react-icons": "^2.2.5",
@@ -64,9 +68,11 @@
     "react-pdf-js": "^1.0.35",
     "react-progress-label": "^1.2.2",
     "react-redux": "^4.0.0",
+    "react-render-html": "^0.5.1",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.6",
+    "react-rte": "^0.15.0",
     "react-slick": "^0.14.11",
     "react-star-rating": "^1.4.2",
     "react-stars": "^2.1.0",
@@ -92,18 +98,20 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^3.17.1",
-    "eslint-config-loopback": "^8.0.0",
-    "nsp": "^2.1.0",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.1.18",
+    "css-loader": "^0.28.7",
+    "eslint": "^3.17.1",
+    "eslint-config-loopback": "^8.0.0",
     "jsdom": "^8.1.0",
     "json-loader": "^0.5.7",
     "nodemon": "^1.11.0",
+    "nsp": "^2.1.0",
+    "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.9.1",
     "webpack-dev-server": "^1.14.0"
   },
