--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-activity": "^1.0.16",
     "react-chartjs-2": "^2.6.2",
     "react-circular-progressbar": "^0.1.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.4.2",
     "react-draft-wysiwyg": "^1.10.9",
@@ -72,6 +73,7 @@
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.6",
     "react-rte": "^0.15.0",
+    "react-scrollbar": "^0.5.1",
     "react-slick": "^0.14.11",
     "react-star-rating": "^1.4.2",
     "react-stars": "^2.1.0",
