feature(server/models): add transaction and payout models

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -51,5 +51,13 @@
   "listeningSession": {
     "dataSource": "db",
     "public": true
+  },
+  "transaction": {
+    "dataSource": "db",
+    "public": true
+  },
+  "payout": {
+    "dataSource": "db",
+    "public": true
   }
 }
