--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "material-ui": "^0.17.1",
     "moment": "^2.18.1",
     "net": "^1.0.2",
+    "node-schedule": "^1.2.5",
     "object-to-json": "0.0.5",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
