refactor(server/models): add publisher model, change transaction model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -59,5 +59,9 @@
   "payout": {
     "dataSource": "db",
     "public": true
+  },
+  "publisher": {
+    "dataSource": "db",
+    "public": true
   }
 }
