--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "net": "^1.0.2",
     "node-schedule": "^1.2.5",
     "object-to-json": "0.0.5",
+    "paypal-rest-sdk": "^1.7.1",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "prerender-node": "^2.7.0",
