--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "pg-hstore": "^2.3.2",
     "prerender-node": "^2.7.0",
     "prop-types": "^15.5.10",
+    "raven": "^2.2.1",
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
     "react-chartjs-2": "^2.6.2",
