--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "raven": "^2.2.1",
     "react": "^15.4.2",
     "react-activity": "^1.0.16",
+    "react-beautiful-dnd": "^3.0.0",
     "react-chartjs-2": "^2.6.2",
     "react-circular-progressbar": "^0.1.3",
     "react-csv": "^1.0.8",
