--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-beautiful-dnd": "^3.0.0",
     "react-chartjs-2": "^2.6.2",
     "react-circular-progressbar": "^0.1.3",
+    "react-cropper": "^1.0.1",
     "react-csv": "^1.0.8",
     "react-custom-scrollbars": "^4.2.1",
     "react-dimensions": "^1.3.0",
@@ -68,7 +69,6 @@
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
     "react-icons": "^2.2.5",
-    "react-image-crop": "^2.0.7",
     "react-loader": "^2.4.2",
     "react-mic": "^8.0.0",
     "react-pdf-js": "^1.0.35",
