--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-stars": "^2.1.0",
     "react-swipeable-views": "^0.11.1",
     "react-tap-event-plugin": "^2.0.1",
+    "react-tappable": "^1.0.2",
     "react-tooltip": "^3.2.1",
     "redux": "^3.0.4",
     "redux-offline": "^2.0.0",
