--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.2",
-    "buttercms": "^1.0.17",
     "chart.js": "^2.6.0",
     "compression": "^1.0.3",
     "connect-multiparty": "^2.0.0",
     "cors": "^2.8.4",
+    "create-react-class": "^15.6.2",
     "dotenv": "^2.0.0",
     "draft-js": "^0.10.1",
     "draftjs-to-html": "^0.7.5",
@@ -53,9 +53,10 @@
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "prerender-node": "^2.7.0",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.6.0",
     "raven": "^2.2.1",
-    "react": "^15.4.2",
+    "raven-js": "^3.21.0",
+    "react": "^16.2.0",
     "react-activity": "^1.0.16",
     "react-beautiful-dnd": "^3.0.0",
     "react-chartjs-2": "^2.6.2",
@@ -64,14 +65,14 @@
     "react-csv": "^1.0.8",
     "react-custom-scrollbars": "^4.2.1",
     "react-dimensions": "^1.3.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.10.9",
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
     "react-icons": "^2.2.5",
     "react-loader": "^2.4.2",
     "react-mic": "^8.0.0",
-    "react-pdf-js": "^1.0.35",
+    "react-pdf-js": "^3.0.3",
     "react-progress-label": "^1.2.2",
     "react-redux": "^4.0.0",
     "react-render-html": "^0.5.1",
@@ -83,16 +84,16 @@
     "react-scrollbar": "^0.5.1",
     "react-slick": "^0.14.11",
     "react-star-rating": "^1.4.2",
-    "react-stars": "^2.1.0",
-    "react-swipeable-views": "^0.11.1",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-stars": "git+https://github.com/n49/react-stars.git",
+    "react-swipeable-views": "^0.12.12",
+    "react-tap-event-plugin": "^3.0.2",
     "react-tappable": "^1.0.2",
     "react-tooltip": "^3.2.1",
     "redux": "^3.0.4",
     "redux-offline": "^2.0.0",
     "redux-persist": "^4.6.0",
     "redux-thunk": "^2.1.0",
-    "request": "^2.81.0",
+    "request": "^2.83.0",
     "request-promise": "^4.2.0",
     "sendinblue-api": "^1.0.8",
     "sequelize": "^4.8.0",
