--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "aws-sdk": "^2.175.0",
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.2",
@@ -81,6 +82,7 @@
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.6",
     "react-rte": "^0.15.0",
+    "react-s3-uploader": "^4.6.0",
     "react-scrollbar": "^0.5.1",
     "react-slick": "^0.14.11",
     "react-star-rating": "^1.4.2",
