--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.2",
+    "buttercms": "^1.1.0",
     "chart.js": "^2.6.0",
     "compression": "^1.0.3",
     "connect-multiparty": "^2.0.0",
