--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.1.4",
     "aws-sdk": "^2.175.0",
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
