--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-icons": "^2.2.5",
     "react-loader": "^2.4.2",
     "react-mic": "^8.0.0",
+    "react-on-screen": "^2.0.1",
     "react-pdf-js": "^3.0.3",
     "react-progress-label": "^1.2.2",
     "react-redux": "^4.0.0",
