--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase-admin": "^5.2.1",
     "fs": "0.0.1-security",
     "helmet": "^1.3.0",
+    "image-size": "^0.6.2",
     "immutable": "^3.8.1",
     "jwt-decode": "^2.1.0",
     "localforage": "^1.5.0",
