--- a/package.json
+++ b/package.json
@@ -68,12 +68,14 @@
     "react-beautiful-dnd": "^3.0.0",
     "react-chartjs-2": "^2.6.2",
     "react-circular-progressbar": "^0.1.3",
+    "react-color": "^2.13.8",
     "react-cropper": "^1.0.1",
     "react-csv": "^1.0.8",
     "react-custom-scrollbars": "^4.2.1",
     "react-dimensions": "^1.3.0",
     "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.10.9",
+    "react-dropzone": "^4.2.7",
     "react-gemini-scrollbar": "^2.3.0",
     "react-helmet": "^5.0.2",
     "react-icons": "^2.2.5",
@@ -82,6 +84,7 @@
     "react-on-screen": "^2.0.1",
     "react-pdf-js": "^3.0.3",
     "react-progress-label": "^1.2.2",
+    "react-radio-buttons": "^1.2.1",
     "react-redux": "^4.0.0",
     "react-render-html": "^0.5.1",
     "react-responsive-audio-player": "^1.1.4",
@@ -114,6 +117,7 @@
     "sw-toolbox": "^3.6.0",
     "tls": "0.0.1",
     "url-loader": "^0.5.7",
+    "video-react": "^0.9.4",
     "webpack": "^1.13.2",
     "whatwg-fetch": "^2.0.3",
     "when": ">= 0.0.1"
