--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-activity": "^1.0.16",
     "react-beautiful-dnd": "^3.0.0",
     "react-chartjs-2": "^2.6.2",
+    "react-checkbox-group": "^4.0.1",
     "react-circular-progressbar": "^0.1.3",
     "react-color": "^2.13.8",
     "react-cropper": "^1.0.1",
