--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-checkbox-group": "^4.0.1",
     "react-circular-progressbar": "^0.1.3",
     "react-color": "^2.13.8",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-cropper": "^1.0.1",
     "react-csv": "^1.0.8",
     "react-custom-scrollbars": "^4.2.1",
