--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-redux": "^4.0.0",
     "react-render-html": "^0.5.1",
     "react-responsive-audio-player": "^1.1.4",
+    "react-responsive-modal": "^2.0.1",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^4.0.6",
