--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-chartjs-2": "^2.6.2",
     "react-checkbox-group": "^4.0.1",
     "react-circular-progressbar": "^0.1.3",
+    "react-collapsible": "^2.0.4",
     "react-color": "^2.13.8",
     "react-copy-to-clipboard": "^5.0.1",
     "react-cropper": "^1.0.1",
