Set up PlatformCharges and Transfers in postgres

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -71,5 +71,13 @@
   "publisher": {
     "dataSource": "db",
     "public": true
+  },
+  "PlatformCharges": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Transfers": {
+    "dataSource": "db",
+    "public": true
   }
 }
