--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-cropper": "^1.0.1",
     "react-csv": "^1.0.8",
     "react-custom-scrollbars": "^4.2.1",
+    "react-datetime": "^2.14.0",
     "react-dimensions": "^1.3.0",
     "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.10.9",
