--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "posttest": "npm run lint && nsp check",
     "test": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "start": "webpack --watch",
-    "start:server": "nodemon server.js",
+    "start:server": "nodemon server/server.js",
     "build": "webpack"
   },
   "dependencies": {
