adding events table

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -79,5 +79,9 @@
   "Transfers": {
     "dataSource": "db",
     "public": true
+  },
+  "Event": {
+    "dataSource": "db",
+    "public": true
   }
 }
