--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.15.2",
     "buttercms": "^1.1.0",
     "chart.js": "^2.6.0",
+    "cheerio": "^1.0.0-rc.2",
     "compression": "^1.0.3",
     "connect-multiparty": "^2.0.0",
     "cors": "^2.8.4",
@@ -43,6 +44,7 @@
     "firebase-admin": "^5.12.1",
     "fs": "0.0.1-security",
     "helmet": "^1.3.0",
+    "html-entities": "^1.2.1",
     "image-size": "^0.6.2",
     "immutable": "^3.8.1",
     "jwt-decode": "^2.1.0",
@@ -142,7 +144,6 @@
     "css-loader": "^0.28.7",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
-    "html-entities": "^1.2.1",
     "jsdom": "^8.1.0",
     "json-loader": "^0.5.7",
     "nodemon": "^1.11.0",
