#57 prettier bracketSpacing false

--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
   },
   "license": "UNLICENSED",
   "prettier": {
+    "bracketSpacing": false,
     "singleQuote": true,
     "trailingComma": "es5"
   }
