--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fs": "0.0.1-security",
     "helmet": "^1.3.0",
     "html-entities": "^1.2.1",
+    "http-proxy-middleware": "^0.18.0",
     "image-size": "^0.6.2",
     "immutable": "^3.8.1",
     "jimp": "0.2.27",
