--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,25 @@ services:
     ports:
       - 3000:3000
     environment:
+      - ALGOLIA_API_KEY
+      - ALGOLIA_APP_ID
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - DB_NAME
+      - DB_PASSWORD
+      - DB_USER
+      - FIREBASE_API_KEY
+      - FIREBASE_CLIENT_ID
+      - FIREBASE_MESSAGING_SENDER_ID
+      - FIREBASE_PRIVATE_KEY
+      - FIREBASE_PRIVATE_KEY_ID
+      - FIREBASE_PROJECT_ID
+      - PAYPAL_CLIENT_ID
+      - PAYPAL_CLIENT_SECRET
+      - SENDIN_BLUE_API_KEY
+      - SEND_GRID_API_KEY
+      - STRIPE_KEY_LIVE
+      - STRIPE_KEY_TEST
       - DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
     depends_on:
       - db
@@ -15,9 +34,9 @@ services:
     image: postgres:10
     restart: on-failure
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     volumes:
       - db:/var/lib/postgresql/data
     
