--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build:
     - develop
   script:
     - docker build -t registry.gitlab.com/bigbangbutton/soundwise:latest .
-    - docker push
+    - docker push registry.gitlab.com/bigbangbutton/soundwise:latest
 
 deploy:
   stage: deploy
