--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ build:
     - develop
   script:
     - docker login -u $GITLAB_USERNAME -p $GITLAB_PASSWORD registry.gitlab.com
-    - docker build -t registry.gitlab.com/bigbangbutton/soundwise:latest .
-    - docker push registry.gitlab.com/bigbangbutton/soundwise:latest
+    - docker build -t registry.gitlab.com/eredinbg/soundwise:latest .
+    - docker push registry.gitlab.com/eredinbg/soundwise:latest
 
 deploy:
   stage: deploy
