--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,11 @@ deploy:
     - develop
   script:
     - sudo GITLAB_USERNAME=$GITLAB_USERNAME GITLAB_PASSWORD=$GITLAB_PASSWORD su soundwise
+    - whoami
+    - pwd
     - cp docker-compose.yml /home/soundwise/docker-compose.yml
     - cd /home/soundwise
+    - pwd
     - docker login -u $GITLAB_USERNAME -p $GITLAB_PASSWORD registry.gitlab.com
       && docker-compose pull
       && docker-compose up -d
