--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,8 @@ deploy:
   only:
     - develop
   script:
-    - sudo GITLAB_USERNAME=$GITLAB_USERNAME GITLAB_PASSWORD=$GITLAB_PASSWORD su soundwise
-    - whoami
-    - pwd
     - cp docker-compose.yml /home/soundwise/docker-compose.yml
-    - cd /home/soundwise
-    - pwd
-    - docker login -u $GITLAB_USERNAME -p $GITLAB_PASSWORD registry.gitlab.com
-      && docker-compose pull
-      && docker-compose up -d
+    - sudo GITLAB_USERNAME=$GITLAB_USERNAME GITLAB_PASSWORD=$GITLAB_PASSWORD su soundwise
+    - sudo chmod +x on_behalf.sh
+    - sudo ./on_behalf.sh soundwise "docker login -u $GITLAB_USERNAME -p $GITLAB_PASSWORD registry.gitlab.com"
+    - sudo ./on_behalf.sh soundwise "docker-compose pull && docker-compose up -d"
