--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,9 @@ services:
       - api.env
     depends_on:
       - db
-    command:
-      ./wait-for db:5432 -- pm2-runtime start ecosystem.config.js --env staging
+    command: ./wait-for db:5432 -- pm2-runtime start ecosystem.config.js --env staging
   db:
-    image: postgres:9.2
+    image: postgres:9.3
     restart: on-failure
     env_file:
       - db.env
