--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,5 @@
-node_modules
-client/js
-server/scripts/ffmpeg
-
+/node_modules/*
+/client/js/*
+/server/scripts/ffmpeg/*
+/server/boot/*
+/database/*
