#5 iTunesUrls add run options

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,5 @@
-node_modules
-client/js
-server/scripts/ffmpeg
+/node_modules/*
+/client/js/*
+/server/scripts/ffmpeg/*
+/server/boot/*
+/database/*
