--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": "loopback",
+  "parser": "babel-eslint",
   "rules": {
     "object-curly-spacing": ["error", "always"],
     "operator-linebreak": "off"
