Split docker compose yml into two envs

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -2,15 +2,15 @@ version: '3'
 
 services:
   api:
-    image: registry.gitlab.com/eredinbg/soundwisecms_web:latest
+    image: ${PRODUCTION_TAG}
     restart: on-failure
     ports:
-      - 3000:3000
+      - 8080:3000
     env_file:
       - api.env
     depends_on:
       - db
-    command: ./wait-for db:5432 -- pm2-runtime start ecosystem.config.js --env staging
+    command: ./wait-for db:5432 -- pm2-runtime start ecosystem.config.js --env production
   db:
     image: postgres:9.3
     restart: on-failure
