--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ build_production:
   script:
     - cp /home/soundwise/client.env client.env
     - docker login -u $GITLAB_USERNAME -p $GITLAB_PASSWORD registry.gitlab.com
-    - docker build --build-arg NODE_ENV=production --build-arg FIREBASE_API_KEY --build-arg FIREBASE_PROJECT_ID --build-arg FIREBASE_API_KEY --build-arg FIREBASE_MESSAGING_SENDER_ID --build-arg FIREBASE_API_KEY --build-arg STRIPE_KEY_LIVE --build-arg AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY -t $PRODUCTION_TAG .
+    - docker build --build-arg NODE_ENV=prod --build-arg FIREBASE_API_KEY --build-arg FIREBASE_PROJECT_ID --build-arg FIREBASE_API_KEY --build-arg FIREBASE_MESSAGING_SENDER_ID --build-arg FIREBASE_API_KEY --build-arg STRIPE_KEY_LIVE --build-arg AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY -t $PRODUCTION_TAG .
     - docker push $PRODUCTION_TAG
 
 deploy_production:
