--- a/package.json
+++ b/package.json
@@ -134,27 +134,29 @@
     "video-react": "^0.9.4",
     "videojs": "^1.0.0",
     "videojs-record": "^2.1.2",
-    "webpack": "^1.13.2",
     "whatwg-fetch": "^2.0.3",
     "when": ">= 0.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.1.18",
-    "css-loader": "^0.28.7",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
     "jsdom": "^8.1.0",
     "json-loader": "^0.5.7",
     "nodemon": "^1.11.0",
     "nsp": "^2.1.0",
-    "style-loader": "^0.18.2",
-    "sw-precache-webpack-plugin": "^0.9.1",
+    "style-loader": "^0.22.1",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^1.14.0"
   },
   "repository": {
