--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "express-fileuploader-s3": "0.0.1",
     "feedparser": "^2.2.9",
     "file-loader": "^0.10.1",
-    "firebase": "^4.13.1",
+    "firebase": "^5.4.2",
     "firebase-admin": "^5.12.1",
     "fs": "0.0.1-security",
     "helmet": "^1.3.0",
@@ -59,6 +59,7 @@
     "loopback-component-explorer": "^4.0.0",
     "loopback-connector-postgresql": "^3.0.2",
     "loopback-ds-timestamp-mixin": "^3.4.1",
+    "mailchimp-api-v3": "^1.12.0",
     "material-ui": "^0.17.1",
     "moment": "^2.18.1",
     "net": "^1.0.2",
