--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
   },
   "license": "UNLICENSED",
   "prettier": {
+    "printWidth": 100,
     "bracketSpacing": true,
     "singleQuote": true,
     "trailingComma": "es5"
