--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-fileuploader-s3": "0.0.1",
     "feedparser": "^2.2.9",
     "file-loader": "^0.10.1",
+    "file-type": "^9.0.0",
     "firebase": "^4.13.1",
     "firebase-admin": "^5.12.1",
     "fs": "0.0.1-security",
