--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-pdf-js": "^3.0.3",
     "react-progress-label": "^1.2.2",
     "react-radio-buttons": "^1.2.1",
+    "react-radio-group": "^3.0.3",
     "react-redux": "^4.0.0",
     "react-render-html": "^0.5.1",
     "react-responsive-audio-player": "^1.1.4",
