--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sendgrid/client": "^6.1.4",
     "@sendgrid/mail": "^6.1.4",
     "algoliasearch": "^3.24.9",
+    "autosuggest-highlight": "^3.1.1",
     "aws-sdk": "^2.175.0",
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
@@ -76,6 +77,7 @@
     "raven-js": "^3.21.0",
     "react": "^16.2.0",
     "react-activity": "^1.0.16",
+    "react-autosuggest": "^9.4.2",
     "react-beautiful-dnd": "^3.0.0",
     "react-chartjs-2": "^2.6.2",
     "react-checkbox-group": "^4.0.1",
